erDiagram
    MODULES ||--o{ PERMISSIONS : "contiene (1:N)"
    ROLES ||--o{ ROLE_PERMISSIONS : "posee (1:N)"
    PERMISSIONS ||--o{ ROLE_PERMISSIONS : "asignado a (1:N)"
    USERS ||--o{ USER_ROLES : "posee (1:N)"
    ROLES ||--o{ USER_ROLES : "asignado a (1:N)"

    MODULES {
        string id PK
        string name UK
        string description
        boolean is_active
        datetime created_at
    }

    PERMISSIONS {
        string id PK
        string module_id FK
        string name
        string code UK
        string description
        boolean is_active
        datetime created_at
    }

    ROLES {
        string id PK
        string name UK
        string description
        boolean is_active
        datetime created_at
        datetime updated_at
    }

    ROLE_PERMISSIONS {
        string role_id PK_FK
        string permission_id PK_FK
        datetime assigned_at
    }

    USER_ROLES {
        string user_id PK_FK
        string role_id PK_FK
        datetime assigned_at
    }